--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^8.1.0",
+    "@supabase/doctest-js": "^0.1.0",
     "husky": "^8.0.2",
     "size-limit": "^8.1.0",
     "tsdx": "^0.14.1",
